--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,5 +29,21 @@
 
 	{% include footer.html %}
 
+	<script>
+	window.addEventListener('load', stickyHeader);
+	window.addEventListener('scroll', stickyHeader, {passive: true});
+
+	// Get the offset position of the navbar
+	var header = document.querySelector('header.header');
+	var stickyPos = header ? header.offsetTop : 0;
+
+	function stickyHeader() {
+		if (window.scrollY > stickyPos) {
+			header.classList.add('sticky');
+		} else {
+			header.classList.remove('sticky');
+		}
+	}
+	</script>
 </body>
 </html>
