Link to master branch for install

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 		{% endfor %}
 	</nav>
 	<div class="credit">
-		Created by <a href="http://www.gidgreen.com/">Gideon Greenspan</a>
+		Created by <a href="http://www.gidgreen.com/">Gideon Greenspan</a>, <a href="https://github.com/svivian">Scott Vivian</a>,
 		and <a href="https://github.com/q2a/question2answer/graphs/contributors">contributors</a>
 	</div>
 </footer>
