--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -3,7 +3,12 @@
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
-
 	gtag('config', 'UA-1974891-11');
-	gtag('config', 'UA-1165533-8'); // old tracking ID
+</script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V4Y9LK428F"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-V4Y9LK428F');
 </script>
