--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,14 +2,14 @@
 
 <header class="header">
 	<div class="header-logo">
-		<a href="/"><img class="logo-img normal-logo" src="/images/question2answer-logo-white-350x40.png" alt="Question2Answer logo"></a>
+		<a href="/"><img class="logo-img normal-logo" src="{{ site.baseurl }}/images/question2answer-logo-white-350x40.png" alt="Question2Answer logo"></a>
 	</div>
 	<nav class="top-nav main-nav">
 		{% for navpage in site.nav.main %}
-			<a class="main-nav-link" href="{{ navpage.path }}">{{ navpage.name }}</a>
+			<a class="main-nav-link" href="{{ site.baseurl }}{{ navpage.path }}">{{ navpage.name }}</a>
 		{% endfor %}
 		{% for navpage in site.nav.second %}
-			<a class="main-nav-link {{ navpage.class | default: '' }}" href="{{ navpage.url }}">{{ navpage.name }}</a>
+			<a class="main-nav-link {{ navpage.class | default: '' }}" href="{% if navpage.url contains 'http' %}{{ navpage.url }}{% else %}{{ site.baseurl }}{{ navpage.url }}{% endif %}">{{ navpage.name }}</a>
 		{% endfor %}
 	</nav>
 </header>
