--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,14 +8,14 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="/css/styles2020.css">
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/styles2020.css">
 
 	<title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title }}{% endif %}</title>
 	<meta name="description" content="{{ site.description }}">
 
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
-	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/apple-touch-icon.png">
 	{% include analytics.html %}
 </head>
 
