Refactored Github Repository dates, finished 2020 design
- Refactored the repository dates function.
Dates are now stored on user devices via localStorage, and are only fetched again if there's a change on the lists size (one more list item added, one less list item removed) , or 90 days / 3 months have passed since last fetched. the amount of days for the next fetch can be changed at the top of the scripts.js file.
- Current visited page now is highlighted.
- Added Breadcrumbs
- Added sidebar navigation for sections of the articles.
- Created a popup for the "Welcome to Docs" text.
- Added scroll to top button.
- Internal links fixes.
- Added Mega Menu for Documentation, to group things into sections.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,23 @@
+<div class="jump-top-container">
+	<div id="jump-top" class="jump-top noSelect desktop-only"><span class="material-icons">arrow_upward</span></div>
+</div>
+
+<div class="page-status-container"></div>
+
 <footer class="footer">
-	<nav class="footer-nav">
-		{% for navpage in site.nav.footer %}
-			<a class="footer-nav-link" href="{{ navpage.url }}">{{ navpage.name }}</a>
-		{% endfor %}
-	</nav>
-	<div class="credit">
-		Created by <a href="http://www.gidgreen.com/">Gideon Greenspan</a>, <a href="https://github.com/svivian">Scott Vivian</a>,
-		and <a href="https://github.com/q2a/question2answer/graphs/contributors">contributors</a>
+	<div class="footer-container">
+		<nav class="footer-nav">
+			<ul>
+			{% for navpage in site.nav.footer %}
+				<li>
+					<a class="footer-nav-link" href="{% if navpage.url contains 'http' %}{{ navpage.url }}{% else %}{{ site.baseurl }}{{ navpage.url }}{% endif %}">{{ navpage.name }}</a>
+				</li>
+			{% endfor %}
+			</ul>
+		</nav>
+		<div class="credit">
+			Created by <a href="http://www.gidgreen.com/">Gideon Greenspan</a>, <a href="https://github.com/svivian">Scott Vivian</a>,
+			and <a href="https://github.com/q2a/question2answer/graphs/contributors">contributors</a>
+		</div>
 	</div>
 </footer>
