--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,11 +2,23 @@
 layout: default
 ---
 
-<h1 class="home-intro"><strong>Question2Answer</strong> (Q2A) is a popular open source Q&A platform for PHP/MySQL, currently running on <a href="https://www.question2answer.org/sites.php">24,500+ sites in 40 languages</a>.</h1>
+<div class="home-intro-container">
+	<h1 class="home-intro"><strong>Question2Answer</strong> (Q2A) is a popular open source Q&A platform for PHP/MySQL, currently running on <a href="https://www.question2answer.org/sites.php">24,500+ sites in 40 languages</a>.</h1>
+</div>
 
-{{ content }}
+<div class="notice-container">
+	<div class="notice">
+		<div class="close-notice material-icons">close</div>
+		<div class="notice-image"></div>
+		<div class="notice-text home-intro-card">
+			{{ content }}
+		</div>
+		<div class="clear"></div>
+	</div>
+	<div class="close-sheet"></div>
+</div>
 
-<div class="showcase-cols">
+<article class="showcase-cols">
 
 		{% capture answerText %}
 			<p>A Q&amp;A site helps your online community to share knowledge.
@@ -23,8 +35,8 @@ layout: default
 		{% include card-showcase.html icon="people" title="Why offer Q&amp;A on my site?" answer=answerText %}
 
 		{% capture answerText %}
-			<p><a href="https://www.question2answer.org/question2answer-latest.zip"><b>Download Question2Answer</b></a>, then read <a href="/install/">how to install</a>.
-				Version 1.8.8 was <a href="/install/versions/">released</a> on July 25th, 2023.
+			<p><a href="https://www.question2answer.org/question2answer-latest.zip"><b>Download Question2Answer</b></a>, then read <a href="{{ site.baseurl }}/install/">how to install</a>.
+				Version 1.8.8 was <a href="{{ site.baseurl }}/install/versions/">released</a> on July 25th, 2023.
 				Also <a href="https://github.com/q2a/question2answer">on GitHub</a>.</p>
 			<p>Question2Answer is open source, <a href="https://www.question2answer.org/license.php">licensed under GPL v2+</a>.</p>
 		{% endcapture %}
@@ -43,9 +55,9 @@ layout: default
 
 		{% capture answerText %}
 			<ul>
-				<li>Q2A takes 5 minutes (or less!) to <a href="/install/">install</a>.</li>
-				<li>Easy styling with <a href="/themes/">CSS themes</a>.</li>
-				<li>Supports <a href="/translate/">translation</a> into any language.</li>
+				<li>Q2A takes 5 minutes (or less!) to <a href="{{ site.baseurl }}/install/">install</a>.</li>
+				<li>Easy styling with <a href="{{ site.baseurl }}/themes/">CSS themes</a>.</li>
+				<li>Supports <a href="{{ site.baseurl }}/translate/">translation</a> into any language.</li>
 				<li>Custom sidebar, widgets, pages and links.</li>
 				<li>SEO features such as <a href="https://www.sitemaps.org/">XML Sitemap</a> and neat URLs.</li>
 			</ul>
@@ -68,24 +80,24 @@ layout: default
 				<li>Create experts, editors, moderators and admins.</li>
 				<li>User avatars (or <a href="https://en.gravatar.com/">Gravatar</a>) and custom fields.</li>
 				<li>Private messages and public wall posts.</li>
-				<li>Log in via Facebook or others (using <a href="/addons/plugins/">plugins</a>).</li>
+				<li>Log in via Facebook or others (using <a href="{{ site.baseurl }}/addons/plugins/">plugins</a>).</li>
 			</ul>
 		{% endcapture %}
 		{% include card-showcase.html icon="face" title="Built-in user account management ..." answer=answerText %}
 
 		{% capture answerText %}
 			<ul>
-				<li>Out-of-the-box <a href="/install/wordpress/">WordPress</a> and Joomla integration.</li>
-				<li>Custom <a href="/install/single-sign-on/">single sign-on</a> support for other sites.</li>
-				<li>Deep integration and customization via <a href="/plugins/">plugins</a>.</li>
+				<li>Out-of-the-box <a href="{{ site.baseurl }}/install/wordpress/">WordPress</a> and Joomla integration.</li>
+				<li>Custom <a href="{{ site.baseurl }}/install/single-sign-on/">single sign-on</a> support for other sites.</li>
+				<li>Deep integration and customization via <a href="{{ site.baseurl }}/plugins/">plugins</a>.</li>
 			</ul>
 		{% endcapture %}
 		{% include card-showcase.html icon="assignment_ind" title="... or integrate with existing sites" answer=answerText %}
 
 		{% capture answerText %}
 			<ul>
-				<li>PHP/MySQL <a href="/install/optimize/">scalable</a> to millions of users and posts.</li>
-				<li><a href="/install/security/">Safe from</a> XSS, CSRF and SQL injection attacks.</li>
+				<li>PHP/MySQL <a href="{{ site.baseurl }}/install/optimize/">scalable</a> to millions of users and posts.</li>
+				<li><a href="{{ site.baseurl }}/install/security/">Safe from</a> XSS, CSRF and SQL injection attacks.</li>
 				<li>Beat spam with captchas, moderation and/or flagging.</li>
 			</ul>
 		{% endcapture %}
@@ -93,10 +105,10 @@ layout: default
 
 		{% capture answerText %}
 			<p>Contribute <a href="https://github.com/q2a/question2answer">via Github</a>,
-				create a <a href="/themes/">theme</a>,
-				<a href="/plugins/">plugin</a> or
-				<a href="/translate/">translation</a>.</p>
+				create a <a href="{{ site.baseurl }}/themes/">theme</a>,
+				<a href="{{ site.baseurl }}/plugins/">plugin</a> or
+				<a href="{{ site.baseurl }}/translate/">translation</a>.</p>
 		{% endcapture %}
 		{% include card-showcase.html icon="translate" title="How can I help?" answer=answerText %}
 
-</div>
+</article>
