Seperated GithubLinks script, from main scripts, since they're only used for 2 pages
- Seperated GithubLinks script, from main scripts, since they're only used for 2 pages.
- Reverted Gemfile.lock to original. The  extra Windows systems options weren't necessary.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,5 +30,10 @@
 		{% include footer.html %}
 
 		<script src="{{ site.baseurl }}/js/scripts.js"></script>
+		
+		{% if (page.slug == 'addons-plugins') or (page.slug == 'addons-themes') %}
+		<script src="{{ site.baseurl }}/js/GithubLinks.js"></script>
+		{% endif %}
+		
 	</body>
 </html>
