Syntax Error fix for _layouts\default, and UX patches

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 
 		<script src="{{ site.baseurl }}/js/scripts.js"></script>
 		
-		{% if (page.slug == 'addons-plugins') or (page.slug == 'addons-themes') %}
+		{% if page.slug == 'addons-plugins' or page.slug == 'addons-themes' %}
 		<script src="{{ site.baseurl }}/js/GithubLinks.js"></script>
 		{% endif %}
 		
