Page Slugs + Dynamic Sidebar
The sidebar will be populated with link anchors to sections/titles of the page, via JS

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,6 @@
+{% if page.slug == 'homepage' %}
 <div class="wave-container"></div>
+{% endif %}
 
 <header class="header">
 	<div class="header-logo">
